# fits_processing

./: .gitignore  ARCHITECTURE.md  README.md  config.json  gitignore  pyproject.toml  streakprocessing.py  temp_streakprocessing.py
.claude/: settings.local.json
calibration_frames/: README.txt  mdark.fits  mflat.fits
docs/: adaptive_local_background_report.md  double_pass_background_report.md  gaussian_blur_background_report.md  hough_line_detection_report.md  simple_median_background_report.md  snr_estimation_report.md
legacy/: satprocessing.py  streakprocessing.py
output/: processing_results.txt  streaks.csv
src/streakiller/: __main__.py
src/streakiller/background/: __init__.py  adaptive_local.py  base.py  double_pass.py  gaussian_blur.py  simple_median.py
src/streakiller/calibration/: __init__.py  calibrator.py
src/streakiller/cli/: __init__.py  main.py
src/streakiller/config/: __init__.py  defaults.py  schema.py
src/streakiller/detection/: detector.py  normalizer.py
src/streakiller/filters/: __init__.py  angle.py  chain.py  colinear.py  endpoint.py  length.py  midpoint.py
src/streakiller/io/: __init__.py  fits_loader.py  output_writer.py  tle_cache.py
src/streakiller/models/: __init__.py  fits_image.py  result.py  streak.py
src/streakiller/pipeline/: __init__.py  (+1 more)
testing_shit/: smooth_plot.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_adaptive_local_estimator.py  test_background_estimators.py  test_calibrator.py  test_config.py  test_filters.py  test_fits_loader.py  test_snr_estimator.py
(+4 files in other folders)
